# Constrained-Injective-Mappings

./: CMakeLists.txt  README.md
apps/: ArcOverlap_Iso_QN.cpp  ArcOverlap_PN.cpp  ArcOverlap_QN.cpp  SEA_2D_PN.cpp  SEA_2D_QN.cpp  SEA_Generalized_2D_QN.cpp  SEA_Iso_2D_QN.cpp  SEA_Iso_test.cpp  SEA_QN.cpp  SEA_test.cpp  TLC.cpp  TLC_QN.cpp  arcOverlap_Iso_test.cpp  arcOverlap_test.cpp  arc_arc_intersection_test.cpp  arc_occupancy_gradient_test.cpp  arc_occupancy_test.cpp  arrangement_test.cpp  cell_decompose_test.cpp  sTGC_2D_PN.cpp  sTGC_2D_QN.cpp  sTGC_3D_PN.cpp  sTGC_3D_QN.cpp  sTGC_PN.cpp  sTGC_QN.cpp  sTLC_Iso_2D_QN.cpp  sTLC_Iso_QN.cpp  subdivide_polyArc_test.cpp
cmake/: nlohmann-json.cmake
example/: result  solver_options
example/SEA_Generalized_2D_QN/IsoSEA/: result  solver_options
example/SEA_Generalized_2D_QN/SEA/: input  result  solver_options
example/TLC_QN/: result
example/sTGC_2D_PN/IsoTLC/: input  result  solver_options
example/sTGC_2D_PN/TLC/: result  solver_options
example/sTGC_2D_QN/IsoTLC/: result  solver_options
example/sTGC_2D_QN/TLC/: result  solver_options
example/sTGC_3D_PN/IsoTLC/: input  result  solver_options
example/sTGC_3D_QN/IsoTLC/: result  solver_options
src/: Arc_Occupancy.cpp  Arc_Occupancy.h  Arc_Overlap_Formulation.cpp  Arc_Overlap_Formulation.h  Arc_Overlap_Iso_Formulation.cpp  Arc_Overlap_Iso_Formulation.h  Arrangement.cpp  Arrangement.h  Circular_Arc.cpp  Circular_Arc.h  Rectangle.cpp  Rectangle.h  SEA_2D_Formulation.cpp  SEA_2D_Formulation.h  SEA_Formulation.cpp  SEA_Formulation.h  SEA_Generalized_2D_Formulation.cpp  SEA_Generalized_2D_Formulation.h  SEA_Iso_2D_Formulation.cpp  SEA_Iso_2D_Formulation.h  Total_Generalized_Content.cpp  Total_Generalized_Content.h  Total_Generalized_Content_2D.cpp  Total_Generalized_Content_2D.h  Total_Generalized_Content_3D.cpp  Total_Generalized_Content_3D.h  Total_Lifted_Content.cpp  Total_Lifted_Content.h  Total_Lifted_Content_2D.cpp  Total_Lifted_Content_2D.h  Total_Lifted_Content_Isometric.cpp  Total_Lifted_Content_Isometric.h  Total_Lifted_Content_Isometric_2D.cpp  Total_Lifted_Content_Isometric_2D.h  deformation_gradient_util.cpp  deformation_gradient_util.h  geo_util.cpp  geo_util.h  optimization_util.cpp  optimization_util.h  (+12 more)
